tests/diagnostics/catalog/snapshots/ir/IR0051.snap
error[IR0051]: IR_E_MUTABILITY_CONFLICT
 --> tests/diagnostics/catalog/sources/ir/IR0051.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0051
  = help: keep IR validation diagnostics structured and catalog-backed
